Fix spacing on Blog

--- a/src/scss/components/_spacing.scss
+++ b/src/scss/components/_spacing.scss
@@ -27,8 +27,8 @@
         --block-bottom-spacing: 2;
         --novablocks-element-spacing-multiplier: 0.5;
         
-        &:last-child {
-            --block-bottom-spacing: 0;
+        &:first-child {
+            --block-top-spacing: 0;
         }
         
         @include below(lap) {
