--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3190,8 +3190,8 @@ span.page-numbers {
   --block-top-spacing: 2;
   --block-bottom-spacing: 2;
   --novablocks-element-spacing-multiplier: 0.5; }
-  .novablocks-media--blog[class][class][class]:last-child {
-    --block-bottom-spacing: 0; }
+  .novablocks-media--blog[class][class][class]:first-child {
+    --block-top-spacing: 0; }
   @media not screen and (min-width: 1000px) {
     .novablocks-media--blog[class][class][class] {
       --block-bottom-spacing: 0; } }
